重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/bindUser.html
+++ b/Addons/Shop/View/default/User/bindUser.html
@@ -38,7 +38,7 @@
 </div>
 <include file="./Addons/Shop/View/default/User/_footer.html"/>
 
-<script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/jquery.min.js?v={:SITE_VERSION}"></script>
+<script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/jquery.min.js"></script>
 <script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/mui.min.js?v={:SITE_VERSION}"></script>
 <script type="text/javascript">
     mui.init({});
