重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/mycart.html
+++ b/Addons/Shop/View/default/User/mycart.html
@@ -17,7 +17,7 @@
 
             <p>果盘还是空的</p>
 
-            <p><a href="{:U('index')}">去果园转转吧</a></p>
+            <p><a href="index.php?s=/addon/Shop/User/index">去果园转转吧</a></p>
         </div>
 
         <else/>
