--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -188,7 +188,7 @@
         <span class="mui-icon mui-icon-person"></span>
         <span class="mui-tab-label">我的信息</span>
     </a>
-    <a class="mui-tab-item my-basket" href="index.php?s=/addon/Shop/User/myCart">
+    <a class="mui-tab-item my-basket" href="index.php?s=/addon/Shop/User/cart">
         <span class="mui-icon iconfont icon-shuiguo"></span>
         <span class="mui-tab-label">我的果盘</span>
         <span class="mui-badge" style="color: #cc044d" id="cartCountSpan">{$cartCount}</span>
