重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -188,7 +188,7 @@
         <span class="mui-icon mui-icon-person"></span>
         <span class="mui-tab-label">我的信息</span>
     </a>
-    <a class="mui-tab-item my-basket" href="index.php?s=/addon/Shop/User/cart">
+    <a id="myCart" class="mui-tab-item my-basket" href="index.php?s=/addon/Shop/User/cart">
         <span class="mui-icon iconfont icon-shuiguo"></span>
         <span class="mui-tab-label">我的果盘</span>
         <span class="mui-badge" style="color: #cc044d" id="cartCountSpan">{$cartCount}</span>
@@ -275,6 +275,7 @@
         src="{:ADDON_PUBLIC_PATH}/user/js/mui.pullToRefresh.material.js?v={:SITE_VERSION}"></script>-->
 <script>
     mui.init();
+
     (function ($) {
         //阻尼系数
         var deceleration = mui.os.ios ? 0.003 : 0.0009;
@@ -366,6 +367,17 @@
             mui.toast('尚未绑定用户信息，请先绑定用户信息');
         }
     }
+
+    var myCartTab = document.getElementById("myCartTab");
+    myCartTab.addEventListener("tap", function(){
+        if(userInfo.getAttribute('value')){
+            window.location.assign("index.php?s=/addon/Shop/User/cart");
+        }
+        else
+        {
+            window.location.assign("index.php?s=/addon/Shop/User/bindUser");
+        }
+    });
 </script>
 </body>
 </html>
