重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -379,7 +379,7 @@
         }
     });
 
-    mui('.operation-wrapper').on('tap', 'operation', function(){
+    mui('.operation-wrapper').on('tap', 'p', function(){
         var goodsId = this.getAttribute('id');
         addToCart(goodsId);
     });
