重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/_head.html
+++ b/Addons/Shop/View/default/User/_head.html
@@ -13,6 +13,6 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
-    <link href="{:ADDON_PUBLIC_PATH}/user/css/mui.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
+    <link href="{:ADDON_PUBLIC_PATH}/user/css/mui.min.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
     <link href="{:ADDON_PUBLIC_PATH}/user/css/app.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
 </head>
