重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/cart.html
+++ b/Addons/Shop/View/default/User/cart.html
@@ -25,14 +25,11 @@
 </head>
 <body>
 <nav class="mui-bar mui-bar-tab">
-    <div class="mui-tab-item mui-active mui-checkbox" style="background-color: #F8FAFA; padding-left: 0.5rem; text-align: left">
+    <div class="mui-tab-item mui-active mui-checkbox" style="background-color: #F8FAFA; padding-left: 0.5rem; text-align: left; width: 3%">
         <input class="custom_check check_all" id="checkAll" name="checkAll" type="checkbox"
                checked="checked" style="position: relative; top: 0; right: 0"/>
         <span class="mui-tab-label">全选</span>
-    </div>
-    <div id="myCartTab" class="mui-tab-item my-basket" style="color: #F8FAFA; font-size: 0.875rem;">
-        <p>共<span id="totalCount">12</span>件</p>
-        <p>总计<span class="goods-price">￥<span id="totalPrice">00.00</span></span></p>
+        共<span id="totalCount">12</span>件, 总计<span class="goods-price">￥<span id="totalPrice">00.00</span></span>
     </div>
     <div class="mui-tab-item one-key-pay">
         <button class="settlement" type="submit" style="background: transparent; border: 0; color: #F8FAFA">结算</button>
