重构用户Mobile端页面及逻辑

--- a/Addons/Shop/View/default/User/cart.html
+++ b/Addons/Shop/View/default/User/cart.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 <nav class="mui-bar mui-bar-tab">
-    <div class="mui-tab-item mui-active mui-checkbox" style="background-color: #F8FAFA; padding-left: 0.5rem; text-align: left; width: 3%">
+    <div class="mui-tab-item mui-active mui-checkbox" style="background-color: #F8FAFA; padding-left: 0.5rem; text-align: left; width: 3%; font-size: 0.875rem">
         <input class="custom_check check_all" id="checkAll" name="checkAll" type="checkbox"
                checked="checked" style="position: relative; top: 0; right: 0"/>
         <span class="mui-tab-label">全选</span>
